--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.drhelios.mobilecontroller": "https://github.com/DrHelios/MobileControlPackage.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
@@ -46,5 +47,11 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
+  },
+  "lock": {
+    "com.drhelios.mobilecontroller": {
+      "revision": "HEAD",
+      "hash": "97de45d8e27ef1bde6738654c822b1cdc7c9ee2c"
+    }
   }
 }
